# cadiback

./: .gitignore  CMakeLists.txt  build_debug.sh  build_emscripten.sh  build_norm.sh  build_release.sh  build_static.sh  build_static_release.sh  cadiback.cpp  config.hpp.in  configure  flake.nix  generate  main.cpp  makefile.emscripten  makefile.in
.github/workflows/: build.yml
include/: cadiback.h
